--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^2.6.5",
     "es6-promise": "^4.2.8",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.2",
     "vue-session": "^1.0.0",
