--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.5",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
