--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^6.0.0",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^2.6.11",
     "es6-promise": "^4.2.8",
