Anything not related to Vuetify, AppBar.vue, NavBar.vue, Homepage.vue, or App.vue are all related to prettier

--- a/package.json
+++ b/package.json
@@ -1,69 +1,55 @@
 {
-  "name": "myapp",
+  "name": "andrew-kincaid-frontend",
   "version": "0.1.0",
-  "engines": {
-    "node": "12.16"
-  },
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "lint-fix": "vue-cli-service lint --fix",
-    "postinstall": "if test \"$NODE_ENV\" = \"production\" ; then npm run build ; fi ",
-    "start": "node server.js"
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/eslint-config-prettier": "^6.0.0",
     "connect-history-api-fallback": "^1.6.0",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.3",
+    "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vuelidate": "^0.7.5",
-    "vuetify": "^2.3.8",
-    "vuex": "^3.5.1",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.4.0",
     "vuex-persistedstate": "^2.7.1"
   },
   "devDependencies": {
     "@mdi/js": "^3.9.97",
-    "@vue/cli-plugin-babel": "^4.5.3",
-    "@vue/cli-plugin-eslint": "^4.5.3",
-    "@vue/cli-service": "^3.12.1",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^7.3.1",
-    "vue-cli-plugin-vuetify": "^0.6.3",
+    "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "lint-staged": "^9.5.0",
+    "node-sass": "^4.12.0",
+    "prettier": "^2.2.1",
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.6.0"
+    "vuetify-loader": "^1.7.0"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
+  "gitHooks": {
+    "pre-commit": "lint-staged"
   },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions"
-  ]
+  "lint-staged": {
+    "*.{js,jsx,vue}": [
+      "vue-cli-service lint",
+      "git add"
+    ]
+  }
 }
